Enhance tree of cards
Create tree of cards with custom node separator. Separator
customized on Options page and used to split labels of cards
as a path in a tree. Example: label "a/b/c" with separator "/"
will produce subtree with nodes a, b, c, where b is a child of a and
c is a child of b.

--- a/clipperz-chrome-extension/_locales/en/messages.json
+++ b/clipperz-chrome-extension/_locales/en/messages.json
@@ -27,6 +27,10 @@
         "message": "Passphrase",
         "description": "The label on the options page 'Passphrase'"
     },
+    "options_page_tree_separator": {
+        "message": "Nested Labels Separator",
+        "description": "The label on the options page 'Nested Labels Separator'"
+    },
     "options_page_save": {
         "message": "Save",
         "description": "The label on the options page 'Save'"
