--- a/clipperz-chrome-extension/_locales/ru/messages.json
+++ b/clipperz-chrome-extension/_locales/ru/messages.json
@@ -27,6 +27,10 @@
         "message": "Пароль",
         "description": "Label on options page 'Passphrase'"
     },
+    "options_page_tree_separator": {
+        "message": "Разделитель вложеных имен",
+        "description": "The label on the options page 'Nested Labels Separator'"
+    },
     "options_page_save": {
         "message": "Сохранить",
         "description": "Label on options page 'Save'"
